--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -13,18 +13,18 @@
   <body>
     <div id='wrapper'>
       <div id='header'>
-        <h1>Scott Chacon</h1>
-        <h2>is a tool of the masses</h2>
+        <h1>OVL</h1>
+        <h2>Holiday Assistant</h2>
       </div>
       <div id='menu'>
         <ul>
           <li><a href='/'>Home</a></li>
-          <li><a href='/blog.html'>Blog</a></li>
-          <li><a href='/about.html'>About</a></li>
-          <li><a href='/talks.html'>Talks</a></li>
-          <li><a href='/open-source.html'>Code</a></li>
-          <li><a href='http://github.com/schacon' target='_blank' rel='me'>GitHub</a></li>
-          <li><a href='http://www.linkedin.com/in/schacon' target='_blank' rel='me'>LinkedIn</a></li>
+          <li><a href='/blog.html'>Account Details</a></li>
+          <li><a href='/about.html'>Reviews</a></li>
+          <li><a href='/talks.html'>Planning</a></li>
+          <li><a href='/open-source.html'>Booking</a></li>
+          <li><a href='http://github.com/schacon' target='_blank' rel='me'>Location</a></li>
+          <li><a href='http://www.linkedin.com/in/schacon' target='_blank' rel='me'>Facebook</a></li>
           <li><a href='http://twitter.com/chacon' target='_blank' rel='me'>Twitter</a></li>
         </ul>
       </div>
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div id='footer'>
-      Copyright &copy; 2009 Scott Chacon. Theme and code by <a href="http://github.com/mbleigh">Michael Bleigh</a>. Hosted by <a href='http://github.com/schacon/schacon.github.com/' target='_blank'>GitHub</a> and powered by <a href='http://github.com/mojombo/jekyll'>Jekyll</a>.
+      Copyright &copy; 2015 James Wu. Theme and code by <a href="http://github.com/mbleigh">Michael Bleigh</a>. Hosted by <a href='http://github.com/schacon/schacon.github.com/' target='_blank'>GitHub</a> and powered by <a href='http://github.com/mojombo/jekyll'>Jekyll</a>.
     </div>
     <script type="text/javascript">
       var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
